--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Expanding Cards</title>
     </head>
-    <body></body>
+    <body>
+        <div class="container">
+            <div class="panel"></div>
+            <div class="panel"></div>
+            <div class="panel"></div>
+            <div class="panel"></div>
+            <div class="panel"></div>
+        </div>
+       <script src="script.js"></script>
+    </body>
 </html>
