--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Expanding Cards</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="container">
-            <div class="panel"></div>
+            <div
+                class="panel"
+                style="background-image: url('images/sample_pic_01.jpg')"
+            ></div>
             <div class="panel"></div>
             <div class="panel"></div>
             <div class="panel"></div>
