--- a/index.html
+++ b/index.html
@@ -4,18 +4,40 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Expanding Cards</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <div class="container">
             <div
-                class="panel"
+                class="panel active"
                 style="background-image: url('images/sample_pic_01.jpg')"
-            ></div>
-            <div class="panel"></div>
-            <div class="panel"></div>
-            <div class="panel"></div>
-            <div class="panel"></div>
+            >
+                <h3>Beautiful Mountain</h3>
+            </div>
+            <div
+                class="panel"
+                style="background-image: url('images/sample_pic_02.jpg')"
+            >
+                <h3>Sunlit Street</h3>
+            </div>
+            <div
+                class="panel"
+                style="background-image: url('images/sample_pic_03.jpg')"
+            >
+                <h3>Amsterdam</h3>
+            </div>
+            <div
+                class="panel"
+                style="background-image: url('images/sample_pic_04.jpg')"
+            >
+                <h3>Japanese Tower</h3>
+            </div>
+            <div
+                class="panel"
+                style="background-image: url('images/sample_pic_05.jpg')"
+            >
+                <h3>Old Japanese Street</h3>
+            </div>
         </div>
         <script src="script.js"></script>
     </body>
